# ComputerInfoPimpl

./: CMakeLists.txt  main.cpp
private/: CMakeLists.txt  LogImpl.cpp
private/log_memory/: LogMemory.h
private/log_time/: LogTime.h
private/log_user/: LogUser.h
public/: CMakeLists.txt  Log.h
